2006-08-01  Thorsten Kukuk  <kukuk@thkukuk.de>

	* doc/man/pam_fail_delay.3.xml: Fix some Bugs and enhance
	rationale about when this function should be used and when not.

	* doc/index.html: Cleanup to look prettier.

2006-08-01  Thorsten Kukuk  <kukuk@thkukuk.de>

	* libpam/Makefile.am: Bump patchlevel of libpam.
	* libpam/pam_dispatch.c (_pam_dispatch_aux): If [return=die]
	or [return=bad] is used, don't return PAM_IGNORE. Based on
        patch by Tomas Mraz <t8m@centrum.cz>, [BRC#196859].

2006-07-28  Thorsten Kukuk  <kukuk@thkukuk.de>

	* ABOUT-NLS: Upgrade to gettext-0.15.
	* config.rpath: Likewise.
	* m4/gettext.m4: Upgrade to gettext-0.15.
	* m4/inttypes-h.m4: New file, from gettext-0.15.
	* m4/inttypes-pri.m4: Upgrade to gettext-0.15.
	* m4/lib-link.m4: Upgrade to gettext-0.15.
	* m4/lib-prefix.m4: Upgrade to gettext-0.15.
	* m4/lock.m4: New file, from gettext-0.15.
	* m4/longdouble.m4: Upgrade to gettext-0.15.
	* m4/nls.m4: Upgrade to gettext-0.15.
	* m4/po.m4: Upgrade to gettext-0.15.
	* m4/size_max.m4: Upgrade to gettext-0.15.
	* m4/visibility.m4: New file, from gettext-0.15.
	* po/Makefile.in.in: Upgrade to gettext-0.15.

2006-07-24  David Quigley   <dpquigl@tycho.nsa.gov>

	* modules/pam_namespace/Makefile.am: Add pam_namespace.h.
	* modules/pam_namespace/pam_namespace.c: Move includes and
	data structure definitions from here ...
	* modules/pam_namespace/pam_namespace.h: ... here. New file.

	* modules/pam_namespace/pam_namespace.c: Move large sections
	of code into new functions.

2006-07-24  Thorsten Kukuk  <kukuk@thkukuk.de>

	* doc/adg/Makefile.am: Add uninstall and distclean rules.
	* doc/mwg/Makefile.am: Likewise.
	* doc/sag/Makefile.am: Likewise.

2006-07-08  Daniel Richard G.  <skunk@iskunk.org>

	* conf/pam_conv1/Makefile.am: Fix rules for lex and yacc files.
	* conf/pam_conv1/pam_conv.lex: Rename to ...
	* conf/pam_conv1/pam_conv_l.l: ... this.
	* conf/pam_conv1/pam_conv.y: Rename to ...
	* conf/pam_conv1/pam_conv_y.y: ... this.